# cmake-examples

08-gsc_task/gsc_task/gsc_porting/: CMakeLists.txt
08-gsc_task/gsc_task/gsc_porting/liboppo/: CMakeLists.txt
08-gsc_task/gsc_task/gsc_porting/liboppo/lib/: dsp_lib.h  dsp_lib_math.h
08-gsc_task/gsc_task/gsc_porting/liboppo/src/: LUDA_FIXED_WB_2mic_160mm_1203_mobile_3EntBeam.c  config.h
08-gsc_task/gsc_task/gsc_porting/liboppo/src/base/fft/: fft.c  fft_table_1024.c  fft_table_512.c
08-gsc_task/gsc_task/gsc_porting/liboppo/src/base/fft/kissfft/: _kiss_fft_guts.h  kiss_fft.c  kiss_fft.h  kiss_fftr.c  kiss_fftr.h
08-gsc_task/gsc_task/gsc_porting/liboppo/src/base/include/: AISP_TSL_base.h  AISP_TSL_fft.h  AISP_TSL_math.h  AISP_TSL_mem.h  AISP_TSL_printf.h  AISP_TSL_shift.h  AISP_TSL_str.h  AISP_TSL_types.h  AISP_TSL_win.h
08-gsc_task/gsc_task/gsc_porting/liboppo/src/base/io/: AISP_TSL_printf.c
08-gsc_task/gsc_task/gsc_porting/liboppo/src/base/math/: AISP_TSL_add.c  AISP_TSL_mul.c  AISP_TSL_sigmoid.c  AISP_TSL_sqrt.c
08-gsc_task/gsc_task/gsc_porting/liboppo/src/base/mem/: AISP_TSL_mem.c
08-gsc_task/gsc_task/gsc_porting/liboppo/src/base/mem/mem3/: mem3.c  mem3.h
08-gsc_task/gsc_task/gsc_porting/liboppo/src/base/string/: AISP_TSL_str.c
08-gsc_task/gsc_task/gsc_porting/liboppo/src/base/window/: AISP_TSL_win.c  hanning_512.c  hanning_sqrt_1024.c  hanning_sqrt_256.c  hanning_sqrt_512.c
08-gsc_task/gsc_task/gsc_porting/liboppo/src/lite-uda/: lite-uda.c  lite-uda.h
08-gsc_task/gsc_task/gsc_porting/liboppo/src/mobile/include/: gsc_api.h  gsc_core_config.h  gsc_core_func.h  gsc_core_tables.h  gsc_core_types.h  gsc_core_version.h
08-gsc_task/gsc_task/gsc_porting/liboppo/src/mobile/src/: gsc_api.c  gsc_core_config.c  gsc_core_func.c  gsc_core_tables.c
08-gsc_task/gsc_task/gsc_porting/src/: task_main.c
08-gsc_task/gsc_task/gsc_porting/src/lite-uda/: luda.c
08-gsc_task/gsc_task/gsc_porting/src/lite-uda/tool/: aisp_tsl_wbMat2cFile_liteuda.m
